--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,18 @@
 
 body {
-  margin: 0;
-  padding: 0;
+  margin: 0px;
+  padding: 0px;
 }
 
 .app {
   display: flex;
   flex-direction: column;
+  margin:0px;
 }
-
 
 .section-1 {
   height: 100vh;
- 
+
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -30,6 +30,7 @@ body {
 
 
 .section-2 {
-  background-color: #f5f5f5; 
+  background-color: #393E46; 
+  filter: brightness(0.7); 
   padding: 50px;
 }
