--- a/src/components/BookingForm.css
+++ b/src/components/BookingForm.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   padding: 0;
-  background: url('https://img.freepik.com/free-photo/healthcare-workers-medicine-insurance-covid-pandemic-concept-smiling-attractive-female-doctor-ph_1258-92302.jpg?w=2000&t=st=1706097768~exp=1706098368~hmac=2f130ae3049e9ecfd6c30194d22ea5bdcab42a28cbda8f9396d489333543719d') center/cover no-repeat fixed;
+  background: url('./image-professional-woman-doctor-physician-with-clipboard-writing-listening-patient-hospital-cl.jpg') center/cover no-repeat fixed;
   height: 100vh;
 }
 
